fix: added email validator and general errors
